--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./css/style.cssù">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
        <!-- logo -->
         <header>
-
+            <img src="./img/Logo.png" alt="logo Boolean">
+            <span id="titolo">Toboolist</span>
         </header>
         <!-- corpo -->
         <main>
