Added top section and label structure

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         <!-- corpo -->
         <main>
             <!-- top page -->
-            <section>
+            <section id="add">
+                <button>
+                    Add task
+                </button>
+                <span>
+                    <input type="text" placeholder="Add Section">
+                </span>
                 
             </section>
             <!-- main content -->
