Added class for subtitles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
             </section>
             <!-- main content -->
              <!-- New task -->
-             <section>
+             <section class="contenuto">
+                <!-- triangolo -->
+                <span class="triangolo">
+                </span>
+                <!-- testo -->
+                    New task
 
              </section>
              <!-- today -->
