Added text ad label

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- corpo -->
         <main>
             <!-- top page -->
-            <section id="add">
+            <section class="add">
                 <button>
                     Add task
                 </button>
@@ -29,21 +29,66 @@
             </section>
             <!-- main content -->
              <!-- New task -->
-             <section class="contenuto">
-                <!-- triangolo -->
-                <span class="triangolo">
-                </span>
+                <div>
+                    <section class="contenuto add">
+                    <!-- triangolo -->
+                    <span class="triangolo">
+                    </span>
                 <!-- testo -->
                     New task
-
+                </div>
+                <!-- subtext -->
+                <div class="add">
+                    <!-- chech -->
+                    <span class="check">
+                    </span>
+                    Quarterly Newsletter
+                    <button class="label label-blu">
+                        Editorial
+                    </button>
+                </div>
              </section>
              <!-- today -->
              <section>
-
+                <div>
+                    <section class="contenuto add">
+                    <!-- triangolo -->
+                    <span class="triangolo">
+                    </span>
+                <!-- testo -->
+                    New task
+                </div>
+                <!-- subtext -->
+                <div class="add">
+                    <!-- chech -->
+                    <span class="check">
+                    </span>
+                    Quarterly Newsletter
+                    <button class="label label-blu">
+                        Editorial
+                    </button>
+                </div>
              </section>
              <!-- upcoming -->
              <section>
-
+                <div>
+                    <section class="contenuto add">
+                    <!-- triangolo -->
+                    <span class="triangolo">
+                    </span>
+                <!-- testo -->
+                    New task
+                </div>
+                <!-- subtext -->
+                <div class="add">
+                    <!-- chech -->
+                    <span class="check">
+                    </span>
+                    Quarterly Newsletter
+                    <button class="label label-blu">
+                        Editorial
+                    </button>
+                </div>
              </section>
         </main>
         
