Added all text and labels

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 </button>
                 <span>
                     <input type="text" placeholder="Add Section">
-                </span>
-                
+                </span>                
             </section>
             <!-- main content -->
              <!-- New task -->
@@ -56,16 +55,46 @@
                     <span class="triangolo">
                     </span>
                 <!-- testo -->
-                    New task
+                    Today
                 </div>
                 <!-- subtext -->
                 <div class="add">
                     <!-- chech -->
                     <span class="check">
                     </span>
-                    Quarterly Newsletter
+                    Recrtuiting blog post
                     <button class="label label-blu">
                         Editorial
+                    </button>
+                </div>
+                <!-- subtext -->
+                <div class="add">
+                    <!-- chech -->
+                    <span class="check">
+                    </span>
+                    Mobile app lunch
+                    <button class="label label-viola">
+                        Q1 Goals
+                    </button>
+                </div>
+                <!-- subtext -->
+                <div class="add">
+                    <!-- chech -->
+                    <span class="ex">
+                    </span>
+                    Interview John H.
+                    <button class="label label-verde">
+                        Recruiting
+                    </button>
+                </div>
+                <!-- subtext -->
+                <div class="add">
+                    <!-- chech -->
+                    <span class="check">
+                    </span>
+                    Summit update to mobile storefront
+                    <button class="label label-arancione">
+                        Mobile
                     </button>
                 </div>
              </section>
@@ -77,14 +106,41 @@
                     <span class="triangolo">
                     </span>
                 <!-- testo -->
-                    New task
+                    Upcoming
+                </div>
+                <!-- subtext -->
+                <div class="add">
+                    <!-- chech -->
+                    <span class="ex">
+                    </span>
+                    Schedule meeting with Alex
                 </div>
                 <!-- subtext -->
                 <div class="add">
                     <!-- chech -->
                     <span class="check">
                     </span>
-                    Quarterly Newsletter
+                    Homepage refresh
+                    <button class="label label-rosa">
+                        Website
+                    </button>
+                </div>
+                <!-- subtext -->
+                <div class="add">
+                    <!-- chech -->
+                    <span class="check">
+                    </span>
+                    Onboard new Sales team memebers
+                    <button class="label label-oliva">
+                        Sales
+                    </button>
+                </div>
+                <!-- subtext -->
+                <div class="add">
+                    <!-- chech -->
+                    <span class="check">
+                    </span>
+                    Review editorial calendar
                     <button class="label label-blu">
                         Editorial
                     </button>
