Modified class "label" for semplicity

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                 <!-- subtext -->
                 <div>
                     <!-- chech -->
-                    <span class="check">
+                    <span class="simbol check">
                     </span>
                     <span class="subtext">
                         Quarterly Newsletter
                     </span>
-                    <button class="label label-blu">
+                    <span class="label label-blu">
                         Editorial
-                    </button>
+                    </span>
                 </div>
             </section>
              <!-- today -->
@@ -65,42 +65,42 @@
                 <!-- subtext -->
                 <div>
                     <!-- chech -->
-                    <span class="check">
+                    <span class="simbol check">
                     </span>
                     Recrtuiting blog post
-                    <button class="label label-blu">
+                    <span class="label label-blu">
                         Editorial
-                    </button>
+                    </span>
                 </div>
                 <!-- subtext -->
                 <div>
                     <!-- chech -->
-                    <span class="check">
+                    <span class="simbol check">
                     </span>
                     Mobile app lunch
-                    <button class="label label-viola">
+                    <span class="label label-viola">
                         Q1 Goals
-                    </button>
+                    </span>
                 </div>
                 <!-- subtext -->
                 <div>
                     <!-- chech -->
-                    <span class="ex">
+                    <span class="simbol ex">
                     </span>
                     Interview John H.
-                    <button class="label label-verde">
+                    <span class="label label-verde">
                         Recruiting
-                    </button>
+                    </span>
                 </div>
                 <!-- subtext -->
                 <div>
                     <!-- chech -->
-                    <span class="check">
+                    <span class="simbol check">
                     </span>
                     Summit update to mobile storefront
-                    <button class="label label-arancione">
+                    <span class="label label-arancione">
                         Mobile
-                    </button>
+                    </span>
                 </div>
                 </section>
                 <!-- upcoming -->
@@ -117,7 +117,7 @@
                 <!-- subtext -->
                     <div>
                         <!-- chech -->
-                        <span class="ex">
+                        <span class="simbol ex">
                         </span>
                         <span class="subtext">
                             Schedule meeting with Alex
@@ -126,38 +126,38 @@
                     <!-- subtext -->
                     <div>
                         <!-- chech -->
-                        <span class="check">
+                        <span class="simbol check">
                         </span>
                         <span class="subtext">
                             Homepage refresh
                         </span>
-                        <button class="label label-rosa">
+                        <span class="label label-rosa">
                             Website
-                        </button>
+                        </span>
                     </div>
                     <!-- subtext -->
                     <div>
                         <!-- chech -->
-                        <span class="check">
+                        <span class="simbol check">
                         </span>
                         <span class="subtext">
                             Onboard new Sales team memebers
                         </span>
-                        <button class="label label-oliva">
+                        <span class="label label-oliva">
                             Sales
-                        </button>
+                        </span>
                     </div>
                     <!-- subtext -->
                     <div>
                         <!-- chech -->
-                        <span class="check">
+                        <span class="simbol check">
                         </span>
                         <span class="subtext">
                             Review editorial calendar
                         </span>
-                        <button class="label label-blu">
+                        <span class="label label-blu">
                             Editorial
-                        </button>
+                        </span>
                     </div>
                 </section>
         </main>
