Took off buttons and adjusted top page

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <main>
             <!-- top page -->
             <section class="add">
-                <button>
+                <span id="blue">
                     Add task
-                </button>
+                </span>
                 <span>
                     <input type="text" placeholder="Add Section">
                 </span>                
