Correction after reviewing in class

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <!-- corpo -->
         <main>
             <!-- top page -->
-            <section class="add">
-                <span id="blue">
+            <section>
+                <button id="blue">
                     Add task
-                </span>
-                <span>
-                    <input type="text" placeholder="Add Section">
-                </span>                
+                </button>
+                <button id="grey">
+                    Add section
+                </button>                
             </section>
                 <!-- main content -->
                 <!-- New task -->
-            <section class="add">
+            <section>
                 <div>
                 <!-- triangolo -->
                     <span class="triangolo">
@@ -52,7 +52,7 @@
                 </div>
             </section>
              <!-- today -->
-            <section class="add">
+            <section >
                 <div>
                     <!-- triangolo -->
                     <span class="triangolo">
@@ -104,7 +104,7 @@
                 </div>
                 </section>
                 <!-- upcoming -->
-                <section class="add">
+                <section >
                     <div>
                         <!-- triangolo -->
                         <span class="triangolo">
